test/tests/errors/error-record-cannot-override.sm
// true
// false
/**/
/**/

program {
    record person(name, age);
    person = 1;
}